# Compilation-Experiment

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  README.md  main.cpp  test.tc
docs/: bug-issue-log.md  perf-issue-log.md
docs/design/: architecture.md  ast_design.md  ir_design.md  symbol_table.md
docs/prompt/: Bug-Fixer.md  Compiler-Architect.md  Debugger-Agent.md  Lexer-Engineer.md  Project-Manager.md
include/toyc/backend/: code_generator.h
include/toyc/ir/: ir.h  ir_builder.h
include/toyc/lexer/: token.h
include/toyc/optimize/: optimizer.h
include/toyc/parser/: ast.h  parser_api.h
include/toyc/semantic/: semantic_analyzer.h  symbol_table.h
src/backend/: code_generator.cpp
src/ir/: ir_builder.cpp
src/lexer/: lexer.l
src/optimize/: optimizer.cpp
src/parser/: parser.y  parser_api.cpp
src/semantic/: semantic_analyzer.cpp  symbol_table.cpp
tests/backend/: test_backend.cpp
tests/debug/: b08_while_with_and_break.tc  b09_while_with_or_break.tc  b15d_if_in_if_return.tc  b16_func_name_repro.tc  f09_b.tc  f09_c.tc  f09_case1.tc  f09_case3.tc  f09_case4.tc  f09_case6.tc  f09_case7.tc  f09_case8.tc  f09_e.tc  f09_f.tc  f09_func_name_test.tc  f09_g.tc  f09_h.tc  f09_i.tc  f09_j.tc  f09_k.tc  f09_l.tc  f09_m.tc  f09_p1.tc  f09_p10.tc  f09_p11.tc  f09_p2.tc  f09_p3.tc  f09_p4.tc  f09_p5.tc  f09_p6.tc  f09_p7.tc  f09_p8.tc  f09_p9.tc  f09_test1.tc  f09_test2.tc  f09_test_multi.tc  f09_x2.tc  f09_x3.tc  f09_x4.tc  f09_x_test.tc  (+16 more)
tests/integration/: README.md  function_call_ret9.tc  globals_ret42.tc  if_else_ret11.tc  locals_ret9.tc  loop_heavy_ret100.tc  short_circuit_ret1.tc  test_integration.cpp
tests/ir/: test_ir.cpp
tests/lexer/: test_lexer.cpp
tests/optimize/: test_optimizer.cpp
tests/parser/: test_parser.cpp
tests/semantic/: test_semantic.cpp
